Hello uses style

--- a/lib/hello.html
+++ b/lib/hello.html
@@ -1,7 +1,8 @@
 <html>
 Author: Kamil Babayev kamilbababyev@mail.de  +909283928392382
 Seconds author  ADmi  Alieyv  admin@demo.ad
-   <head>
+  <head>
+    <link type="text/css" rel="stylesheet" media="all" href="style.css" />
   </head>
   <body>
     <h1>Hello, World!</h1>
